# prelockd-rs

./: Cargo.toml  LICENSE  Makefile  README.md  prelockd-rs.service.in  prelockd-rs.toml
src/: main.rs
