[package]
name = "prelockd-rs"
version = "0.1.1"
edition = "2021"

[dependencies]
toml = "0.8"
regex = "1.11"
once_cell = "1.20"
sysinfo = "0.32"
memmap2 = "0.9"
rayon = "1.10.0"

[dependencies.clap]
features = ["derive"]
version = "4.5"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
strip = true
